--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,10 +1,24 @@
 /*
 * Third Party
 */
-@import "../../bower_components/normalize.css/normalize.css";
+// @import "../../bower_components/normalize.css/normalize.css";
 
 
 /*
 * Custom
 */
+@import "vendor/bootstrap";
+@import "vendor/font-awesome";
 @import "partials/variable";
+
+
+body{
+    text-align: center;
+}
+img{
+    width: 300px;
+}
+h1{
+    font-family: sans-serif;
+    font-size: 50px;
+}
