--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,9 +7,9 @@
 /*
 * Custom
 */
-@import "vendor/bootstrap";
-@import "vendor/font-awesome";
-@import "partials/variable";
+
+
+@import "aa.scss";
 
 
 body{
