--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,17 +8,4 @@
 * Custom
 */
 
-
-@import "aa.scss";
-
-
-body{
-    text-align: center;
-}
-img{
-    width: 300px;
-}
-h1{
-    font-family: sans-serif;
-    font-size: 50px;
-}
+@import "../blocks/b-header/b-header.scss";
