--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,9 @@
 * Custom
 */
 
+@import "fonts";
 @import "variables";
 @import "../blocks/b-header/b-header";
 @import "../blocks/b-intro-video/b-intro-video";
+@import "../blocks/b-favorite-payment/b-favorite-payment";
+@import "../blocks/b-services-features/b-services-features";
