--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,9 +8,12 @@
 * Custom
 */
 
-@import "fonts";
 @import "variables";
+@import "direction";
+@import "fonts";
 @import "../blocks/b-header/b-header";
 @import "../blocks/b-intro-video/b-intro-video";
 @import "../blocks/b-favorite-payment/b-favorite-payment";
 @import "../blocks/b-services-features/b-services-features";
+@import "../blocks/b-infographic/b-infographic";
+@import "../blocks/b-cross-platform/b-cross-platform";
