--- a/src/style/base.css
+++ b/src/style/base.css
@@ -1,4 +1,12 @@
-@import '../vendor/bootstrap/bootstrap.css';
-@import '../vendor/font-awesome/font-awesome.css';
+@import "../vendor/bootstrap/bootstrap.css";
+@import "../vendor/font-awesome/font-awesome.css";
 
-a:focus {text-decoration: inherit; color: inherit;}
+a {
+  cursor: pointer;
+}
+a:focus {
+  text-decoration: inherit; color: inherit;
+}
+hr {
+  background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.2), transparent); border: 0; height: 1px; margin: 22px 0 22px 0;
+}
