--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,3 +17,5 @@
 @import "../blocks/b-services-features/b-services-features";
 @import "../blocks/b-infographic/b-infographic";
 @import "../blocks/b-cross-platform/b-cross-platform";
+@import "../blocks/b-footer/b-footer";
+@import "../blocks/b-social/b-social";
