--- a/src/style/direction.scss
+++ b/src/style/direction.scss
@@ -1,15 +1,15 @@
-@for $i from 1 through 25 {
-  .padding-right-#{$i*2}{
-    padding-right: #{$i*2}px !important;
+@for $i from 1 through 50 {
+  .padding-right-#{$i}{
+    padding-right: #{$i}px !important;
   }
-  .rtl .padding-left-#{$i*2} {
-    padding-right: #{$i*2}px !important; padding-left: 0 !important;
+  .rtl .padding-left-#{$i} {
+    padding-right: #{$i}px !important; padding-left: 0 !important;
   }
-  .margin-right-#{$i*2} {
-    margin-right: #{$i*2}px !important;
+  .margin-right-#{$i} {
+    margin-right: #{$i}px !important;
   }
-  .rtl .margin-left-#{$i*2} {
-    margin-right: #{$i*2}px !important; margin-left: 0 !important;
+  .rtl .margin-left-#{$i} {
+    margin-right: #{$i}px !important; margin-left: 0 !important;
   }
 }
 .rtl .mirror {
