--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,4 @@
 @import "../blocks/b-cross-platform/b-cross-platform";
 @import "../blocks/b-footer/b-footer";
 @import "../blocks/b-social/b-social";
+@import "../blocks/b-language/b-language";
