--- a/src/template/head.html
+++ b/src/template/head.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="rtl1">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/base.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap-rtl.css"> -->
     <link rel="stylesheet" href="css/main.css">
-
 </head>
 <body>
