--- a/src/blocks/b-favorite-payment/b-favorite-payment.scss
+++ b/src/blocks/b-favorite-payment/b-favorite-payment.scss
@@ -2,7 +2,7 @@
   padding: 40px 0 40px;
 }
 .b-favorite-payment-h2 {
-  margin: 0; line-height: 40px; font-weight: 400; padding-bottom: 5px;
+  margin: 0; line-height: 40px; padding-bottom: 5px;
 }
 .b-favorite-payment-center {
   padding: 10px 0 20px; text-align: center;
