--- a/src/blocks/b-footer/b-footer.scss
+++ b/src/blocks/b-footer/b-footer.scss
@@ -8,7 +8,7 @@
   color: #ff9d00; font-size: 24px; font-weight: 300; padding-top: 10px;
 }
 .b-okpay-footer-news {
-  margin: 0; padding: 0;
+  margin: 0; padding: 0; font-size: 13px;
 }
 .b-okpay-footer-news-li:first-child {
   border-top: none;
@@ -38,13 +38,13 @@
   margin: 0; padding: 0; list-style: none;
 }
 .b-okpay-footer-sub-menu-li {
-  margin: 0; padding: 0; list-style: none; display: inline;
+  margin: 0; padding: 0; list-style: none; display: inline-block;
 }
 .b-okpay-footer-sub-menu-a {
   color: #ff9d00;
 }
 
-@media #{$sm_max} {
+@media #{$md_max} {
   .b-okpay-footer-md-6:first-child .b-okpay-footer-news {
     border-bottom: 1px solid #d6d6d6;
   }
