--- a/src/blocks/b-header/b-header.scss
+++ b/src/blocks/b-header/b-header.scss
@@ -1,1 +1,162 @@
-.b-header__logo {}
+.b-header {
+  top: 0; z-index: 1001; position: relative; height: 110px; border-bottom: 1px solid #fff; box-shadow: 0 0 3px rgba(0, 0, 0, 0.1); background: #fff;
+}
+.b-header__container {
+  padding-top: 12px;
+}
+.b-header__logo {
+  position: relative; top: 22px; transition: top 0.2s linear;
+}
+.b-header__navbar-collapse {
+  margin: 12px 0 0;
+}
+.b-header__logo-img {
+  position: absolute; transition: all 0.2s linear; width: 164px; height: 39px;
+}
+.sticky-b-header {
+  padding-top: 70px;
+}
+.sticky-b-header .b-header {
+  border-bottom: 1px solid #e9e9e9; position: fixed; top: -46px; width: 100%; z-index: 1001; transition: top 0.3s linear;
+}
+.sticky-b-header .b-header__logo-img {
+  width: 116px; height: 28px;
+}
+.sticky-b-header .b-header__logo {
+  top: 51px;
+}
+.b-header-search {position: relative;}
+.b-header-search .b-header-search-input:first-child {
+  -webkit-transition: width 0.2s ease-in 0.2s; -moz-transition: width 0.2s ease-in 0.2s; transition: width 0.2s ease-in 0.2s; border-radius: 20px; width: 170px; font-size: 0.9em; padding: 6px 12px; height: 34px; margin: 0;
+}
+.b-header-search .b-header-search-input:focus {
+  width: 220px; border-color: #ccc;
+}
+.b-header-search .b-header-search-btn {
+  border: 0; background: transparent; position: absolute; top: 0; color: #ccc; z-index: 3;
+}
+
+@media #{$md_min} {
+  .b-header-navbar-level1 {
+    float: right;
+  }
+  .rtl .b-header-navbar-level1 {
+    float: left;
+  }
+  .b-header-level1 {
+    position: static !important;
+    padding: 0 1px;
+  }
+  .b-header-level1-link, .b-header-level1-link:focus {
+    font-size: 14px; background: #fff !important; text-transform: uppercase; color: #ff9d00; font-weight: 600; padding: 10px 14px !important; border-radius: 4px;
+  }
+  .b-header-level1-link:hover, .b-header-level1-active .b-header-level1-link {
+    color: #fff; background: #ff9d00 !important;
+  }
+  .b-header-level1-with-megamenu:hover {
+    .b-header-level1-link {
+      padding-bottom: 18px !important;color: #fff; background: #ff9d00 !important;
+    }
+    .b-header-mega-submenu {
+      display: block !important;
+    }
+  }
+  .b-header-level1-with-megamenu.open {
+    .b-header-mega-submenu {
+      display: none;
+    }
+  }
+
+  .b-header-navbar-level2 {
+    padding:0 0 0 20px; margin: 0; list-style: none;
+    min-height: 65px;
+  }
+  .b-header-navbar-level2:last-child {
+    border-left: 1px solid #eee;
+  }
+  .b-header-level2 {
+    padding:5px 0;
+  }
+  .b-header-level2-link {
+    color: #333;
+  }
+  .b-header-level2-link:hover {
+    color: #ff9d00 !important;
+  }
+  .b-header-top-padding-for-text {padding-top: 7px;}
+  .b-header-mega-submenu {
+    width: 100%;
+    border-radius: 0;border: none; border-top: 6px solid #ff9d00;
+    margin-top: -9px !important;
+  }
+  .b-header-mega-submenu-container {
+    width: 900px;
+    padding: 14px 0 16px;
+  }
+}
+
+@media #{$md_max} {
+  body {
+    padding-top: 64px;
+  }
+  .b-header-mega-submenu {
+    padding: 3px 0 6px;
+  }
+  .b-header-navbar-level1 {
+    margin: 0;
+  }
+  .b-header-search {display: none;}
+  .b-header-level1 {
+    border-bottom: 1px solid #e3e3e3;
+    margin: 0 15px;
+  }
+  .b-header-level1:last-child {
+    border-bottom: none;
+  }
+  .b-header-level1-link {
+    color: #000; font-size: 12px; text-transform: uppercase; font-weight: 600; margin: 0 0 2px; border-radius: 5px; padding: 10px 0 8px !important;
+  }
+  .b-header-level1-link:hover, .b-header-level1-link:focus , .b-header-level1-link:active  {
+    color: #ff9d00; background: none !important;
+  }
+  .b-header-level2 {
+    padding: 4px 15px;
+  }
+  .b-header-level2-link {
+    color: #333 !important; background: none !important; border-radius: 5px;
+  }
+  .b-header-level2-link:hover {
+    color: #ff9d00 !important; background: none !important; border-radius: 5px;
+  }
+  .b-header-navbar-level2 {
+    margin:0; padding:0 0px; list-style: none;
+
+  }
+  .b-header-mobile-auth {
+    background: #e5e5e5;
+  }
+  .b-header-mobile-auth-title {
+    padding: 10px 15px 6px; display: block; color: #444; font-weight: normal;
+  }
+  .b-header__navbar-collapse {
+    background: #f3f3f3; margin-top: 18px; padding: 0;
+  }
+  .b-header-mobile-container {
+    padding: 0 0px;
+  }
+  .b-header__button-toggle {
+    padding: 0; margin: 0; color: #999;
+  }
+  .b-header {
+    border-bottom: 1px solid #e9e9e9; position: fixed; top: -46px; width: 100%; z-index: 1001;
+  }
+  .b-header__logo-img {
+    width: 116px; height: 28px;
+  }
+  .b-header__logo {
+    top: -6px !important;
+  }
+  .b-header__container {
+    padding-top: 68px;
+  }
+}
