--- a/src/blocks/b-services-features/b-services-features.scss
+++ b/src/blocks/b-services-features/b-services-features.scss
@@ -14,7 +14,10 @@
   border-top: 1px solid #ececec; display: table; width: 100%; padding: 20px 30px 0;
 }
 .b-services-features-box-content-h6 {
-  margin: 15px 0 15px 0; font-size: 14px; line-height: 18px;
+  margin: 15px 0 5px 0; font-size: 14px; line-height: 18px; font-weight: 600;
+}
+.b-services-features-box-content-text {
+  margin: 0px 0 12px 0; font-size: 14px; line-height: 18px; font-weight: 400; display: block;
 }
 .b-services-features-box-one {
   border-bottom-color: #f17d1f;
@@ -30,6 +33,9 @@
 }
 .b-services-features-box-five {
   border-bottom-color: #2bb79b;
+}
+.b-services-features-box-six {
+  border-bottom-color: #4EA5BB;
 }
 .b-services-features-box-img-container {
   display: table-cell; vertical-align: middle; height: 128px; width: 100%;
