--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,12 +11,12 @@
 @import "variables";
 @import "direction";
 @import "fonts";
-@import "../blocks/b-header/b-header";
-@import "../blocks/b-intro-video/b-intro-video";
-@import "../blocks/b-favorite-payment/b-favorite-payment";
-@import "../blocks/b-services-features/b-services-features";
-@import "../blocks/b-infographic/b-infographic";
-@import "../blocks/b-cross-platform/b-cross-platform";
-@import "../blocks/b-footer/b-footer";
-@import "../blocks/b-social/b-social";
-@import "../blocks/b-language/b-language";
+@import "b-header/b-header";
+@import "b-intro-video/b-intro-video";
+@import "b-favorite-payment/b-favorite-payment";
+@import "b-services-features/b-services-features";
+@import "b-infographic/b-infographic";
+@import "b-cross-platform/b-cross-platform";
+@import "b-footer/b-footer";
+@import "b-social/b-social";
+@import "b-language/b-language";
